[package]
name = "DiscordBot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.5", default-features = false, features = ["voice", "cache", "model", "rustls_backend"]}
slashy = "0.1.2"
songbird = { version = "0.3.1", features = ["builtin-queue", "yt-dlp"]}
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.37"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.16"
url = "2.3.1"
